--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
 #main_svg {
-	height: 500px;
+	height: 50vh;
+}
+
+#menubar {
+    height: 60px;
+    border-bottom-width: 1px;
+    border-bottom-color: gray;
+    margin: 0 auto;
+    white-space: nowrap;
+    box-shadow: 0px 0px 10px rgba(0,0,0,.5);
+    text-align: center;
+    position: relative;
+    padding-top: 20px;
+    width: 100%;
+}
+
+.main-header-logo {
+    color: #353940;
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    line-height: 16px;
+    cursor: pointer;
+    margin-right: 40px;
+}
+
+.header-menu-item a {
+    width: auto;
+    height: 60px;
+    overflow: hidden;
+    padding: 15px 10px;
+    cursor: pointer;
+    letter-spacing: 0.2px;
+    color: #6E7480;
 }
