--- a/templates/multirater.html
+++ b/templates/multirater.html
@@ -29,19 +29,19 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-
+                <div id="selectors">
+                    <span class="selectorNum">1</span>
+                    <select id="studySelector" class="selector"></select>
+                    <span class="selectorNum">2</span>
+                    <select id="imageSelector" class="selector"></select>
+                    <span class="selectorNum">3</span>
+                    <select id="featureSelector" class="selector"></select>
+                </div>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-12" id="viewer">
-                <div id="selectors">
-                    <span class="selectorNum">1</span>
-                    <select id="studySelector"></select>
-                    <span class="selectorNum">2</span>
-                    <select id="imageSelector"></select>
-                    <span class="selectorNum">3</span>
-                    <select id="featureSelector"></select>
-                </div>
+
             </div>
         </div>
         <div class="row">
