--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,6 +43,14 @@
 	margin: 25px auto;
 }
 
+#imageSelector {
+    min-width: 150px;
+}
+
+#featureSelector {
+    min-width: 150px;
+}
+
 .selectorNum {
 	color: cornflowerblue;
     font-size: 18pt;
