--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,9 @@
 #main_svg {
 	height: 50vh;
-	border-color: blue;
+	border-color: cornflowerblue;
 	border-style: solid;
-	border-width: 1px;
+	border-width: 2px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,.5);
 }
 
 #menubar {
@@ -52,15 +53,20 @@
 }
 
 .selectorNum {
-	color: cornflowerblue;
-    font-size: 18pt;
-    border-color: cornflowerblue;
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 20px;
-    padding: 5px 13px;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  padding: 8px 16px;
+  background: #fff;
+  border: 2px solid cornflowerblue;
+  color: cornflowerblue;
+  text-align: center;
+  font: 32px Arial, sans-serif;
+  margin-right: 4px;
 }
 
 .select2 {
     min-width: 150px;
+    margin-top: -10px !important;
+    margin-right: 4px !important;
 }
