--- a/templates/multirater.html
+++ b/templates/multirater.html
@@ -46,13 +46,13 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <p>annotator info</p>
+                <p>Annotator Information</p>
             </div>
             <div class="col-md-4">
-                <p>statistics</p>
+                <p>Annotation Statistics</p>
             </div>
             <div class="col-md-4">
-                <p>clinical metadata</p>
+                <p>Clinical Information</p>
             </div>
         </div>
     </div>
