--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,8 +91,9 @@
 
 .polygons {
     mix-blend-mode: multiply;
-    stroke: black;
-    stroke-width: 4px;
+    stroke: none;
+    stroke-width: 2px;
+    fill: lightgray;
 /*    isolation: isolate; */
 }
 
