markup highlight bug fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,8 +93,8 @@
     mix-blend-mode: multiply;
     stroke: none;
     stroke-width: 4px;
-    fill: lightgray;
-/*    isolation: isolate; */
+    fill: lightblue;
+/*    fill-opacity: 1; */
 }
 
 #inner-g {
