--- a/templates/multirater.html
+++ b/templates/multirater.html
@@ -46,13 +46,19 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <p>Annotator Information</p>
+                <div id="annotatorInfo">
+                    <p class="infoHeader">Annotator Information</p>
+                </div>
+            </div>
+            <div class="col-md-4" >
+                <div id="annotationStatistics">
+                    <p class="infoHeader">Annotation Statistics</p>
+                 </div>
             </div>
             <div class="col-md-4">
-                <p>Annotation Statistics</p>
-            </div>
-            <div class="col-md-4">
-                <p>Clinical Information</p>
+                <div id="clinicalInformation">
+                    <p class="infoHeader">Clinical Information</p>
+                </div>
             </div>
         </div>
     </div>
