--- a/templates/multirater.html
+++ b/templates/multirater.html
@@ -44,7 +44,7 @@
 
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="hiddenTables">
             <div class="col-md-3">
                 <div id="annotatorInfo">
                     <p class="infoHeader">Annotators For This Feature</p>
@@ -56,8 +56,9 @@
                  </div>
             </div>
             <div class="col-md-3">
-                <div id="clinicalInformation">
+                <div id="statsInformation">
                     <p class="infoHeader">Annotation Statistics</p>
+                    <p id="statsNote">% relative to segmented area unless not present</p>
                 </div>
             </div>
             <div class="col-md-3">
