--- a/templates/multirater.html
+++ b/templates/multirater.html
@@ -11,15 +11,15 @@
 
 <body>
     <div id="menubar">
-        <span class="main-header-logo"><a href="https://isic-archive.com/#!/tightContentTop/main" style="color:black;">ISIC</a></span>
-        <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightContentTop/about">About</a></span>
+        <span class="main-header-logo"><a href="https://isic-archive.com/#!/tightContentTop/main" style="color:black;">ISIC Annotation Viewer</a></span>
+<!--         <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightContentTop/about">About</a></span>
         <span class="header-menu-item"><a href="https://isic-archive.com/#!/onlyHeaderTop/gallery">Gallery</a></span>
         <span class="header-menu-item"><a href="https://challenge2017.isic-archive.com">Challenges</a></span>
         <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightDarkContentTop/studies">Studies</a></span>
         <span class="header-menu-item"><a href="https://dermoscopedia.org/Main_Page">Dermoscopedia</a></span>
         <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightContentTop/main">Contribute to Archive</a></span>
         <span class="header-menu-item"><a href="https://isic-archive.com/api/v1">Download Data</a></span>
-        <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightContentTop/dashboard">Dashboard</a></span>
+        <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightContentTop/dashboard">Dashboard</a></span> -->
         <span class="header-menu-item" id="login" style="color: gray;">Log in</span>
     </div>
     <div class="container">
@@ -86,6 +86,7 @@
     <script src="{{url_for('static', filename='watch.min.js')}}"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+
 
 </body>
 
