--- a/static/css/style.css
+++ b/static/css/style.css
@@ -132,4 +132,12 @@
     display: none;
 }
 
+#zoomDiv {
+    position: absolute;
+    bottom: 10px;
+    right: 15px;
+}
 
+.zoomImg {
+    display: block;
+}
