--- a/static/css/style.css
+++ b/static/css/style.css
@@ -140,4 +140,21 @@
 
 .zoomImg {
     display: block;
+    cursor: pointer;
+}
+
+#zoomIn:hover {
+    box-shadow: 0px 0px 10px rgba(0,0,0,.5);
+}
+
+#zoomOut:hover {
+    box-shadow: 0px 0px 10px rgba(0,0,0,.5);
+}
+
+#scaleText {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding-bottom: 10px;
+    padding-right: 130px;
 }
