--- a/static/css/style.css
+++ b/static/css/style.css
@@ -158,3 +158,45 @@
     padding-bottom: 10px;
     padding-right: 130px;
 }
+
+#viewer {
+    display: flex;
+}
+
+#leftarrow {
+    position: absolute;
+    height: 100px;
+    left: -50px;
+    top: 50px;
+}
+
+
+#leftarrow:hover {
+    position: absolute;
+    height: 100px;
+    left: -50px;
+    top: 50px;
+    cursor: pointer;
+    box-shadow: 0px 0px 10px rgba(0,0,0,.5);
+}
+
+#rightarrow {
+    height: 100px;
+    right: -50px;
+    top: 50px;
+    position: absolute;
+}
+
+#rightarrow:hover {
+    height: 100px;
+    right: -50px;
+    top: 50px;
+    position: absolute;
+    cursor: pointer;
+    box-shadow: 0px 0px 10px rgba(0,0,0,.5);
+}
+
+
+.arrows {
+    display: none;
+}
