--- a/static/css/style.css
+++ b/static/css/style.css
@@ -167,7 +167,7 @@
     position: absolute;
     height: 100px;
     left: -50px;
-    top: 50px;
+    top: 40%;
 }
 
 
@@ -175,7 +175,7 @@
     position: absolute;
     height: 100px;
     left: -50px;
-    top: 50px;
+    top: 40%;
     cursor: pointer;
     box-shadow: 0px 0px 10px rgba(0,0,0,.5);
 }
@@ -183,14 +183,14 @@
 #rightarrow {
     height: 100px;
     right: -50px;
-    top: 50px;
+    top: 40%;
     position: absolute;
 }
 
 #rightarrow:hover {
     height: 100px;
     right: -50px;
-    top: 50px;
+    top: 40%;
     position: absolute;
     cursor: pointer;
     box-shadow: 0px 0px 10px rgba(0,0,0,.5);
@@ -199,4 +199,60 @@
 
 .arrows {
     display: none;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {display:none;}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #2196F3;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #ccc;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #ccc;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
