--- a/templates/multirater.html
+++ b/templates/multirater.html
@@ -74,7 +74,7 @@
             </div>
             <div class="col-md-3">
                 <div id="clinicalInformation">
-                    <p class="infoHeader">Clinical Information</p>
+                    <p class="infoHeader">Clinical Information <span id="openClinicalButton">+</span></p>
                 </div>
             </div>
         </div>
@@ -97,6 +97,7 @@
     <script src="{{url_for('static', filename='watch.min.js')}}"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+    <script src="{{url_for('static', filename='bootstrap-switch.js')}}"></script>
 
 
 </body>
