--- a/static/css/style.css
+++ b/static/css/style.css
@@ -129,8 +129,10 @@
 }
 
 #hiddenTables {
-    padding-top: 20px;
+    padding-top: 10px;
+    margin-top: 10px;
     display: none;
+    background-color: #eee;
 }
 
 #zoomDiv {
@@ -215,6 +217,7 @@
 
 .table td, .table th {
     padding: 0.5rem;
+    border-color: #999;
 }
 
 .btn-group, .btn-group-vertical {
