--- a/static/css/style.css
+++ b/static/css/style.css
@@ -131,7 +131,7 @@
 #hiddenTables {
     padding-top: 10px;
     margin-top: 10px;
-    display: none;
+    /*display: none;*/
     background-color: #eee;
 }
 
@@ -239,4 +239,5 @@
     padding-right: 3px;
     padding-bottom: 2px;
     cursor: pointer;
+    display: none;
 }
