--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,8 @@
      border-width: 2px;
      box-shadow: 0px 0px 10px rgba(0,0,0,.5);
 }
+img {
+}
  #menubar {
      height: 60px;
      border-bottom-width: 1px;
@@ -16,6 +18,7 @@
      position: relative;
      padding-top: 20px;
      width: 100%;
+}
 }
  .main-header-logo {
      color: #353940;
