--- a/templates/multirater.html
+++ b/templates/multirater.html
@@ -3,9 +3,10 @@
    <head>
       <!-- Required meta tags -->
       <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
       <!-- Bootstrap CSS -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+      <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
+      <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
    </head>
    <body>
       <div id="menubar">
@@ -42,11 +43,11 @@
                <span id="scaleText">Scale: 1x</span>
                <div id="zoomDiv">
                   <a href="#" data-toggle="tooltip" title="Using scroll to zoom is usually more efficient!">
-                  <img class="zoomImg" id="zoomIn" src="{{url_for('static', filename='zoom-in-icon.png')}}"></a>
-                  <img class="zoomImg" id="zoomOut" src="{{url_for('static', filename='zoom-out-icon.png')}}">
+                  <img class="zoomImg" id="zoomIn" src="{{url_for('static', filename='img/zoom-in-icon.png')}}"></a>
+                  <img class="zoomImg" id="zoomOut" src="{{url_for('static', filename='img/zoom-out-icon.png')}}">
                </div>
-               <img class="arrows" id="leftarrow" src="{{url_for('static', filename='leftarrow.png')}}">
-               <img class="arrows" id="rightarrow" src="{{url_for('static', filename='rightarrow.png')}}">
+               <img class="arrows" id="leftarrow" src="{{url_for('static', filename='img/leftarrow.png')}}">
+               <img class="arrows" id="rightarrow" src="{{url_for('static', filename='img/rightarrow.png')}}">
             </div>
          </div>
          <div class="row" id="hiddenTables">
@@ -78,24 +79,27 @@
       </div>
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-      <script src="https://d3js.org/d3.v4.min.js"></script>
-      <script type="text/javascript" src="{{url_for('static', filename='main.js')}}"></script>
-      <script type="text/javascript" src="{{url_for('static', filename='selectBox.js')}}"></script>
-      <script src="{{url_for('static', filename='axios.min.js')}}"></script>
-      <script src="{{url_for('static', filename='easyTable.js')}}"></script>
-      <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
+      <script type="text/javascript" src="{{url_for('static', filename='js/jquery-3.2.1.slim.min.js')}}"></script>
+      <script type="text/javascript" src="{{url_for('static', filename='js/popper.min.js')}}"></script>
+      <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
+      <script type="text/javascript" src="{{url_for('static', filename='js/d3.v4.min.js')}}"></script>
+      
+      <script type="text/javascript" src="{{url_for('static', filename='js/selectBox.js')}}"></script>
+      <script type="text/javascript" src="{{url_for('static', filename='js/axios.min.js')}}"></script>
+      <script type="text/javascript" src="{{url_for('static', filename='js/easyTable.js')}}"></script>
+      <script type="text/javascript" src="{{url_for('static', filename='js/jquery.prettydropdowns.js')}}"></script>
+      <script type="text/javascript" src="{{url_for('static', filename='js/watch.min.js')}}"></script>
+
+      <script type="text/javascript" src="{{url_for('static', filename='js/select2.min.js')}}"></script>
+      <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap-switch.js')}}"></script>
+      <script type="text/javascript" src="{{url_for('static', filename='js/jquery.modal.min.js')}}"></script>
+      <script type="text/javascript" src="{{url_for('static', filename='js/main.js')}}"></script>
+
       <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/selectBoxStyle.css')}}">
       <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/easyTable.css')}}">
-      <link rel="stylesheet" href="{{url_for('static', filename='css/prettydropdowns.css')}}">
-      <script src="{{url_for('static', filename='jquery.prettydropdowns.js')}}"></script>
-      <script src="{{url_for('static', filename='watch.min.js')}}"></script>
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
-      <script src="{{url_for('static', filename='bootstrap-switch.js')}}"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+      <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/prettydropdowns.css')}}">
+      <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/select2.min.css')}}"/>
+      <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/jquery.modal.min.css')}}" />
+     
    </body>
 </html>
