--- a/templates/multirater.html
+++ b/templates/multirater.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <!-- Required meta tags -->
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-      <!-- Bootstrap CSS -->
-      <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
-      <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
-      
-   </head>
-   <body>
-      <div id="menubar">
-         <span class="main-header-logo"><a href="https://isic-archive.com/#!/tightContentTop/main" style="color:black;">ISIC Annotation Viewer</a></span>
-         <!--         <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightContentTop/about">About</a></span>
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
+
+</head>
+
+<body>
+    <div id="menubar">
+        <span class="main-header-logo"><a href="" style="color:black;">ISIC Annotation Viewer</a></span>
+        <span class="main-header-logo"><a href="https://isic-archive.com/#!/tightContentTop/main" style="color:black;">ISIC Archive</a></span>
+        <!--         <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightContentTop/about">About</a></span>
             <span class="header-menu-item"><a href="https://isic-archive.com/#!/onlyHeaderTop/gallery">Gallery</a></span>
             <span class="header-menu-item"><a href="https://challenge2017.isic-archive.com">Challenges</a></span>
             <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightDarkContentTop/studies">Studies</a></span>
@@ -21,105 +24,103 @@
             <span class="header-menu-item"><a href="https://isic-archive.com/api/v1">Download Data</a></span>
             <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightContentTop/dashboard">Dashboard</a></span> 
             <span class="header-menu-item" id="login" style="color: gray;">Log in</span>-->
-      </div>
-      <div class="container">
-         <div class="row">
+    </div>
+    <div class="container">
+        <div class="row">
             <div class="col-lg-12">
             </div>
-         </div>
-         <div class="row" id="optionContainer">
+        </div>
+        <div class="row" id="optionContainer">
             <div class="col-lg-12">
-               <div id="selectors">
-                  <span class="selectorNum">1</span>
-                  <select id="studySelector" class="selector"></select>
-                  <span class="selectorNum">2</span>
-                  <select id="imageSelector" class="selector"></select>
-                  <span class="selectorNum">3</span>
-                  <select id="featureSelector" class="selector"></select>
+                <div id="selectors">
+                    <span class="selectorNum">1</span>
+                    <select id="studySelector" class="selector"></select>
+                    <span class="selectorNum">2</span>
+                    <select id="imageSelector" class="selector"></select>
+                    <span class="selectorNum">3</span>
+                    <select id="featureSelector" class="selector"></select>
 
-               </div>
+                </div>
             </div>
-         </div>
-         <div class="row" id="viewerContainer">
+        </div>
+        <div class="row" id="viewerContainer">
             <div class="col-lg-12" id="viewer">
                 <div id="infoPanel">
-        <div class="switch-toggle switch-candy large-9 columns">
-              <input id="d-c1" name="view-d-c" type="radio" checked="">
-              <label for="d-c1" onclick="">Single-Rater</label>
+                    <p>Select Highlighting Mode: </p>
+                    <div class="switch-toggle switch-candy large-9 columns" id="multiraterToggle">
+                        <input id="d-c1" name="view-d-c" type="radio" checked="">
+                        <label for="d-c1" onclick="multiraterMode = false; convertToMultiraterMode(multiraterMode);">Single-Rater</label>
 
-              <input id="d-c2" name="view-d-c" type="radio">
-              <label for="d-c2" onclick="">Agreement Area</label>
+                        <input id="d-c2" name="view-d-c" type="radio">
+                        <label for="d-c2" onclick="multiraterMode = true; convertToMultiraterMode(multiraterMode);">Agreement Area</label>
 
-              
-              
+                        <a></a>
+                    </div>
 
-              <a></a>
-            </div>
-                    
                 </div>
-               <span id="scaleText">Scale: 1x</span>
-               <div id="zoomDiv">
-                  <a href="#" data-toggle="tooltip" title="Using scroll to zoom is usually more efficient!">
-                  <img class="zoomImg" id="zoomIn" src="{{url_for('static', filename='img/zoom-in-icon.png')}}"></a>
-                  <img class="zoomImg" id="zoomOut" src="{{url_for('static', filename='img/zoom-out-icon.png')}}">
-               </div>
-               <img class="arrows" id="leftarrow" src="{{url_for('static', filename='img/leftarrow.png')}}">
-               <img class="arrows" id="rightarrow" src="{{url_for('static', filename='img/rightarrow.png')}}">
+                <span id="scaleText">Scale: 1x</span>
+                <div id="zoomDiv">
+                    <a href="#" data-toggle="tooltip" title="Using scroll to zoom is usually more efficient!">
+                        <img class="zoomImg" id="zoomIn" src="{{url_for('static', filename='img/zoom-in-icon.png')}}"></a>
+                    <img class="zoomImg" id="zoomOut" src="{{url_for('static', filename='img/zoom-out-icon.png')}}">
+                </div>
+                <img class="arrows" id="leftarrow" src="{{url_for('static', filename='img/leftarrow.png')}}">
+                <img class="arrows" id="rightarrow" src="{{url_for('static', filename='img/rightarrow.png')}}">
             </div>
-         </div>
-         <div class="row" id="hiddenTables">
+        </div>
+        <div class="row" id="hiddenTables">
             <div class="col-md-3">
-               <div id="annotatorInfo">
-                  <p class="infoHeader">Annotators For This Feature</p>
-               </div>
+                <div id="annotatorInfo">
+                    <p class="infoHeader">Annotators For This Feature</p>
+                </div>
             </div>
-            <div class="col-md-2" >
-               <div id="annotationColors">
-                  <p class="infoHeader">Color Information</p>
-               </div>
-            </div>
-            <div class="col-md-3">
-               <div id="statsInformation">
-                  <p class="infoHeader">Annotation Statistics</p>
-                  <p id="statsNote">% relative to segmented area unless not present</p>
-               </div>
+            <div class="col-md-2">
+                <div id="annotationColors">
+                    <p class="infoHeader">Color Information</p>
+                </div>
             </div>
             <div class="col-md-3">
-               <div id="clinicalInformation">
-                  <p class="infoHeader">Clinical Information <span id="openClinicalButton">+</span></p>
-               </div>
+                <div id="statsInformation">
+                    <p class="infoHeader">Annotation Statistics</p>
+                    <p id="statsNote">% relative to segmented area unless not present</p>
+                </div>
             </div>
-         </div>
-         <div id="metadataModal" class="modal">
+            <div class="col-md-3">
+                <div id="clinicalInformation">
+                    <p class="infoHeader">Clinical Information <span id="openClinicalButton">+</span></p>
+                </div>
+            </div>
+        </div>
+        <div id="metadataModal" class="modal">
             <span id="modalClose">Close</span>
-         </div>
-      </div>
-      <!-- Optional JavaScript -->
-      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-      <script type="text/javascript" src="{{url_for('static', filename='js/jquery-3.2.1.slim.min.js')}}"></script>
-      <script type="text/javascript" src="{{url_for('static', filename='js/popper.min.js')}}"></script>
-      <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
-      <script type="text/javascript" src="{{url_for('static', filename='js/d3.v4.min.js')}}"></script>
-      
-      <script type="text/javascript" src="{{url_for('static', filename='js/selectBox.js')}}"></script>
-      <script type="text/javascript" src="{{url_for('static', filename='js/axios.min.js')}}"></script>
-      <script type="text/javascript" src="{{url_for('static', filename='js/easyTable.js')}}"></script>
-      <script type="text/javascript" src="{{url_for('static', filename='js/jquery.prettydropdowns.js')}}"></script>
-      <script type="text/javascript" src="{{url_for('static', filename='js/watch.min.js')}}"></script>
+        </div>
+    </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script type="text/javascript" src="{{url_for('static', filename='js/jquery-3.2.1.slim.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/popper.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/d3.v4.min.js')}}"></script>
 
-      <script type="text/javascript" src="{{url_for('static', filename='js/select2.min.js')}}"></script>
-      <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap-switch.js')}}"></script>
-      <script type="text/javascript" src="{{url_for('static', filename='js/jquery.modal.min.js')}}"></script>
-      <script type="text/javascript" src="{{url_for('static', filename='js/main.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/selectBox.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/axios.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/easyTable.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/jquery.prettydropdowns.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/watch.min.js')}}"></script>
 
-      <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/selectBoxStyle.css')}}">
-      <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/easyTable.css')}}">
-      <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/prettydropdowns.css')}}">
-      <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/select2.min.css')}}"/>
-      <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/jquery.modal.min.css')}}" />
+    <script type="text/javascript" src="{{url_for('static', filename='js/select2.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap-switch.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/jquery.modal.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/main.js')}}"></script>
 
-      <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/css-toggle-switch@latest/dist/toggle-switch.css" />
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/selectBoxStyle.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/easyTable.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/prettydropdowns.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/select2.min.css')}}" />
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/jquery.modal.min.css')}}" />
 
-     
-   </body>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/css-toggle-switch@latest/dist/toggle-switch.css" />
+
+</body>
+
 </html>
