--- a/templates/multirater.html
+++ b/templates/multirater.html
@@ -22,8 +22,8 @@
             <span class="header-menu-item"><a href="https://dermoscopedia.org/Main_Page">Dermoscopedia</a></span>
             <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightContentTop/main">Contribute to Archive</a></span>
             <span class="header-menu-item"><a href="https://isic-archive.com/api/v1">Download Data</a></span>
-            <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightContentTop/dashboard">Dashboard</a></span> 
-            <span class="header-menu-item" id="login" style="color: gray;">Log in</span>-->
+            <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightContentTop/dashboard">Dashboard</a></span> -->
+            <span class="header-menu-item" id="login" style="color: gray;">Log in</span>
     </div>
     <div class="container">
         <div class="row">
