--- a/templates/multirater.html
+++ b/templates/multirater.html
@@ -204,6 +204,8 @@
 
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/css-toggle-switch@latest/dist/toggle-switch.css" />
 
+    <script type="text/javascript" src="https://andwecode.com/wp-content/uploads/2015/10/jquery.leanModal.min_.js"></script>
+
 </body>
 
 </html>
