--- a/templates/multirater.html
+++ b/templates/multirater.html
@@ -23,7 +23,7 @@
             <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightContentTop/main">Contribute to Archive</a></span>
             <span class="header-menu-item"><a href="https://isic-archive.com/api/v1">Download Data</a></span>
             <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightContentTop/dashboard">Dashboard</a></span> -->
-            <span class="header-menu-item" id="login" style="color: gray;">Log in</span>
+            <span class="header-menu-item" id="login" style="color: gray;"><a href="#modal">Log in</a></span>
     </div>
     <div class="container">
         <div class="row">
@@ -198,7 +198,7 @@
     <script type="text/javascript" src="https://andwecode.com/wp-content/uploads/2015/10/jquery.leanModal.min_.js"></script>
 
 
-    
+
     <script type="text/javascript" src="{{url_for('static', filename='js/main.js')}}"></script>
 
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/selectBoxStyle.css')}}">
