--- a/templates/multirater.html
+++ b/templates/multirater.html
@@ -23,93 +23,9 @@
             <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightContentTop/main">Contribute to Archive</a></span>
             <span class="header-menu-item"><a href="https://isic-archive.com/api/v1">Download Data</a></span>
             <span class="header-menu-item"><a href="https://isic-archive.com/#!/tightContentTop/dashboard">Dashboard</a></span> -->
-            <span class="header-menu-item" id="login" style="color: gray;"><a href="#modal">Log in</a></span>
+            <span class="header-menu-item" id="login" style="color: gray;"><a href="">Log in</a></span>
     </div>
-<div id="modal" class="popupContainer" style="display:none;">
-                <header class="popupHeader">
-                        <span class="header_title">Login</span>
-                        <span class="modal_close"><i class="fa fa-times"></i></span>
-                </header>
 
-                <section class="popupBody">
-                        <!-- Social Login -->
-                        <div class="social_login">
-                                <div class="">
-                                        <a href="#" class="social_box fb">
-                                                <span class="icon"><i class="fa fa-facebook"></i></span>
-                                                <span class="icon_title">Connect with Facebook</span>
-
-                                        </a>
-
-                                        <a href="#" class="social_box google">
-                                                <span class="icon"><i class="fa fa-google-plus"></i></span>
-                                                <span class="icon_title">Connect with Google</span>
-                                        </a>
-                                </div>
-
-                                <div class="centeredText">
-                                        <span>Or use your Email address</span>
-                                </div>
-
-                                <div class="action_btns">
-                                        <div class="one_half"><a href="#" id="login_form" class="btn">Login</a></div>
-                                        <div class="one_half last"><a href="#" id="register_form" class="btn">Sign up</a></div>
-                                </div>
-                        </div>
-
-                        <!-- Username & Password Login form -->
-                        <div class="user_login">
-                                <form>
-                                        <label>Email / Username</label>
-                                        <input type="text" />
-                                        <br />
-
-                                        <label>Password</label>
-                                        <input type="password" />
-                                        <br />
-
-                                        <div class="checkbox">
-                                                <input id="remember" type="checkbox" />
-                                                <label for="remember">Remember me on this computer</label>
-                                        </div>
-
-                                        <div class="action_btns">
-                                                <div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
-                                                <div class="one_half last"><a href="#" class="btn btn_red">Login</a></div>
-                                        </div>
-                                </form>
-
-                                <a href="#" class="forgot_password">Forgot password?</a>
-                        </div>
-
-                        <!-- Register Form -->
-                        <div class="user_register">
-                                <form>
-                                        <label>Full Name</label>
-                                        <input type="text" />
-                                        <br />
-
-                                        <label>Email Address</label>
-                                        <input type="email" />
-                                        <br />
-
-                                        <label>Password</label>
-                                        <input type="password" />
-                                        <br />
-
-                                        <div class="checkbox">
-                                                <input id="send_updates" type="checkbox" />
-                                                <label for="send_updates">Send me occasional email updates</label>
-                                        </div>
-
-                                        <div class="action_btns">
-                                                <div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
-                                                <div class="one_half last"><a href="#" class="btn btn_red">Register</a></div>
-                                        </div>
-                                </form>
-                        </div>
-                </section>
-        </div>
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -174,6 +90,9 @@
             </div>
         </div>
         <div id="metadataModal" class="modal">
+            <span id="modalClose">Close</span>
+        </div>
+        <div id="loginModal" class="modal">
             <span id="modalClose">Close</span>
         </div>
     </div>
