--- a/templates/multirater.html
+++ b/templates/multirater.html
@@ -34,12 +34,15 @@
         <div class="row" id="optionContainer">
             <div class="col-lg-12">
                 <div id="selectors">
+                    <div id="studySelectorDiv">
                     <span class="selectorNum">1</span>
-                    <select id="studySelector" class="selector"></select>
+                    <select id="studySelector" class="selector"></select></div>
+                    <div id="imageSelectorDiv">
                     <span class="selectorNum">2</span>
-                    <select id="imageSelector" class="selector"></select>
+                    <select id="imageSelector" class="selector"></select></div>
+                    <div id="featureSelectorDiv">
                     <span class="selectorNum">3</span>
-                    <select id="featureSelector" class="selector"></select>
+                    <select id="featureSelector" class="selector"></select></div>
 
                 </div>
             </div>
