--- a/static/css/style.css
+++ b/static/css/style.css
@@ -114,6 +114,9 @@ img {
      margin-top: -10px !important;
      margin-right: 24px !important;
 }
+ .select2-container {
+    min-width: 150px;
+ }
  #loadingDiv {
      position: absolute;
      width: 100%;
