--- a/static/css/style.css
+++ b/static/css/style.css
@@ -110,12 +110,12 @@ img {
      margin-right: 4px;
 }
  .select2 {
-     min-width: 150px;
+     min-width: 150px !important;
      margin-top: -10px !important;
      margin-right: 24px !important;
 }
  .select2-container {
-    min-width: 150px;
+    min-width: 150px !important;
  }
  #loadingDiv {
      position: absolute;
