--- a/static/css/style.css
+++ b/static/css/style.css
@@ -92,8 +92,8 @@ img {
  #imageSelector {
      min-width: 150px;
 }
- #featureSelector {
-    /* min-width: 150px;*/
+ #studySelector {
+    min-width: 250px;
 }
  #selectors select {
     display: none;
