--- a/static/css/style.css
+++ b/static/css/style.css
@@ -253,6 +253,7 @@ img {
  .col-lg-12 {
      padding-right: 0;
      padding-left: 0;
+     display: flex;
 }
  #openClinicalButton {
      color: green;
